[workspace]
resolver = "3"

members = [
    "clash-bin",
    "clash-lib",
    "clash-doc",
    "clash-ffi",
    "clash-dns",
    "clash-netstack"
]


[workspace.package]
version = "0.9.6"
repository = "https://github.com/Watfaq/clash-rs.git"
edition = "2024"
authors = ["https://github.com/Watfaq/clash-rs/graphs/contributors"]
homepage = "https://github.com/watfaq/clash-rs"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"
strip = "symbols"
debug = "none"
panic = "abort"

[profile.detailed-release]
inherits = "release"
codegen-units = 16
lto = "off"
strip = "debuginfo"
debug = "full"
panic = "unwind"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
redundant_clone = "deny"
needless_collect = "deny"
