[package]
name = "clash-rs"
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[features]
default = ["standard", "aws-lc-rs"]
standard = ["shadowsocks", "tuic", "ssh", "shadowquic", "clash-lib/zero_copy"]

plus = ["standard", "onion"]
perf = ["plus", "jemallocator"]

android = ["shadowsocks", "tuic", "aws-lc-rs"] # Android build failed with libc
bsd = ["shadowsocks", "tuic", "aws-lc-rs"]

shadowsocks = ["clash-lib/shadowsocks"]
ssh = ["clash-lib/ssh"]
tuic = ["clash-lib/tuic"]
onion = ["clash-lib/onion"]
shadowquic = ["clash-lib/shadowquic"]

bench = ["clash-lib/bench"]
dhat-heap = ["dep:dhat"]
tokio-console = ["clash-lib/tokio-console"]
jemallocator = ["dep:tikv-jemallocator"]

aws-lc-rs = ["clash-lib/aws-lc-rs"]
ring = ["clash-lib/ring"]

[dependencies]
clap = { version = "4", features = ["derive"] }

clash-lib = { path = "../clash-lib", default-features = false }

dhat = { version = "0.3", optional = true }
tikv-jemallocator = { version = "0.6", optional = true }

sentry = { version = "0.41", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
human-panic = "2.0"
