[package]
name = "clash-ffi"
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[features]
aws-lc-rs = ["clash-lib/aws-lc-rs"]
ring = ["clash-lib/ring"]

[dependencies]
clash-lib = { path = "../clash-lib", default-features = false, features = ["shadowsocks", "tuic", "zero_copy", "onion", "tun"] }
serde_yaml = "0.9"
serde_json = "1.0"

uniffi = { version = "0.29", features = ["cli"] }
thiserror = "2.0.12"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[lib]
name = "clash_rs"
crate-type = ["staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"
