[package]
name = "clash-ffi"
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
clash-lib = { path = "../clash-lib", default-features = false, features = ["shadowsocks", "tuic", "ssh", "zero_copy"] }
tracing = "0.1.41"
tracing-oslog = "0.3.0"
tracing-subscriber = "0.3.20"


[lib]
name = "clashrs"
crate-type = ["staticlib", "cdylib"]
