[package]
name = "clash-lib"
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[features]
default = ["zero_copy", "aws-lc-rs", "dashboard"]

aws-lc-rs = [
    "dep:aws-lc-rs",
    "rustls/aws-lc-rs",
    "quinn-proto/rustls-aws-lc-rs",
    "quinn/rustls-aws-lc-rs",
    "russh/aws-lc-rs",
    "boringtun/aws-lc-rs",
    "hickory-net/https-aws-lc-rs",
    "watfaq-dns/aws-lc-rs",
    "rcgen/aws_lc_rs",
    "shadowquic?/aws-lc-rs",
]
ring = [
    "rustls/ring",
    "quinn-proto/ring",
    "quinn/rustls-ring",
    "russh/ring",
    "boringtun/ring",
    "hickory-net/https-ring",
    "watfaq-dns/ring",
    "rcgen/ring",
    "shadowquic?/ring",
]

# Protos
shadowsocks = ["dep:shadowsocks", "dep:blake3"]
tuic = ["dep:tuic-core", "dep:register-count"]
ssh = ["dep:russh", "dep:dirs", "dep:totp-rs"]
onion = ["dep:arti-client", "dep:tor-rtcompat", "arti-client/onion-service-client"]
shadowquic = ["dep:shadowquic", "shadowquic?/shadowquic-quinn"]
wireguard = ["dep:boringtun", "dep:smoltcp"]
tailscale = ["dep:tailscale"]
tproxy = [
    "dep:etherparse",
]
tun = [
    "dep:tun-rs",
    "dep:watfaq-netstack",
    "dep:smoltcp",
]
redir = []
zero_copy = []
bench = ["dep:criterion"]
telemetry = ["tokio/tracing", "dep:tracing-opentelemetry", "dep:tracing-chrome", "dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk", "dep:opentelemetry-semantic-conventions"]
dashboard = ["dep:rust-embed"]

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["net", "codec", "io", "compat"] }
futures = "0.3"
async-recursion = "1"
async-trait = "0.1"
hyper = { version = "1", features = ["http1", "http2", "client", "server"] }
hyper-util = "0.1"

# Network proto
http = { version = "1" }
http-body-util = "0.1.3"
socket2 = { version = "0.6", features = ["all"] }
tokio-tungstenite = "0.29.0"

# TLS
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2"] }
rustls = { version = "0.23", default-features = false }
rustls-pemfile = "2"
rcgen = { version = "0.14", default-features = false, features = ["pem"] }
webpki-roots = "1.0"

# Error handing & logging
thiserror = "2"
anyhow = "1"

# logging
time = { version = "0.3", features = ["macros", "local-offset"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
tracing-appender = { version = "0.2" }
tracing-log = "0.2"

tracing-chrome = { version = "0.7", optional = true }
opentelemetry = { version = "0.32", optional = true }
opentelemetry-otlp = { version = "0.32", optional = true }
opentelemetry_sdk = { version = "0.32", optional = true, features = ["rt-tokio"] }
tracing-opentelemetry = { version = "0.33", optional = true }
opentelemetry-semantic-conventions = { version = "0.32", optional = true, features = ["semconv_experimental"] }

# Data structures
url = "2"
bytes = "1"
ipnet = "2"
regex = "1"
byteorder = "1"
lru_time_cache = "0.11"
uuid = { version = "1", features = ["v4", "v5", "fast-rng", "macro-diagnostics", "serde"] }
network-interface = { version = "2" }
base64 = "0.22"
hex = "0.4"
zstd = "0.13"
portable-atomic = { version = "1", features = ["serde"] }
generic-array = "1.4"

h2 = "0.4"
prost = "0.14"
tower = { version = "0.5", features = ["util"] }
libc = "0.2"

ip_network_table-deps-treebitmap = "0.5"

# Algorithms
crc32fast = "1"
hmac = "0.13"
sha1 = "0.11"
sha2 = "0.11"
md-5 = "0.11"
chacha20poly1305 = "0.10"
aead = { version = "0.5", features = ["std"] }
aes = "0.9"
blake3 = { version = "1", optional = true }
aes-gcm = "0.11"
cfb-mode = "0.9"
const-fnv1a-hash = "1"

filetime = "0.2"
axum = { version = "0.8", features = ["ws"] }
# Held at 0.6: tower-http 0.7's `serve_dir` (pulled in by the `fs` feature, used
# for the dashboard's ServeDir) imports `std::sync::atomic::AtomicU64`, which
# does not exist on 32-bit targets — it breaks the mips/mipsel builds. Bump once
# tower-http uses portable-atomic (or the `fs` feature is dropped).
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
chrono = { version = "0.4", features = ["serde"] }

# Dashboard auto-download
zip = { version = "8", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"

# Builtin dashboard
rust-embed = { version = "8", optional = true }

# TUN
tun-rs = { version = "2", features = ["async", "async_framed"], optional = true }
watfaq-netstack = { path = "../clash-netstack", optional = true }
smoltcp = { version = "0.13", default-features = false, features = ["std", "log", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-udp", "socket-tcp"], optional = true }

# WireGuard
boringtun = { version = "0.1.0", git = "https://github.com/Watfaq/boring-noise.git", rev = "9ddf1b5", package = "boring-noise", optional = true, default-features = false }

serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_ignored = "0.1"
serde_json = "1"
erased-serde = "0.4"


# Macro Magic
educe = "0.6"

# DNS
watfaq-dns = { path = "../clash-dns", default-features = false }
hickory-net = { version = "0.26", default-features = false }
hickory-resolver = { version = "0.26", default-features = false, features = ["tokio", "system-config"] }
hickory-proto = { version = "0.26", default-features = false }

dhcproto = { git = "https://github.com/bluecatengineering/dhcproto", rev = "eece41c9a13b0e4912fb9a8f08401ab01b4123d4" }
ssh-key = { version = "0.6", features = ["std"] }

rand = "0.10"
tracing = "0.1"

shadowsocks = { version = "1.24", optional = true, features = ["aead-cipher-2022", "stream-cipher", "aead-cipher-extra"], git = "https://github.com/shadowsocks/shadowsocks-rust.git", rev = "c4d8d18527289d12470cad1ce718754c908a75fe" }
maxminddb = "0.29"
public-suffix = "0.1"
murmur3 = "0.5"

arti-client = { version = "0.44", optional = true, default-features = false, features = ["tokio", "rustls", "static-sqlite"] }
tor-rtcompat = { version = "0.44", optional = true, default-features = false, features = ["tokio", "rustls"] }


# tuic
# Held at v1.8.5 (this dependency-group bump left the rest updated). Upgrading
# tuic to v1.8.10 pulls a newer `Tipuch/quinn` `bbrv3` branch tip whose
# `into_0rtt()` signature dropped `ZeroRttAccepted`; the `tuic-server` crate
# (a dev-dependency used by the in-process test server) still calls the old
# signature and fails to build, and no fixed upstream tuic tag exists yet.
# Bump both pins once upstream tuic compiles against current quinn.
tuic-core= { tag = "v1.8.5", optional = true, git = "https://github.com/Itsusinn/tuic.git", features = ["async_marshal", "marshal", "model"] }
register-count = { version = "0.1", optional = true }

quinn = { version = "0.11", default-features = false, features = ["futures-io", "runtime-tokio"] }

# hysteria2
h3 = "0.0.8"
h3-quinn = "0.0.10"
quinn-proto = { version = "0.11", default-features = false }
blake2 = "0.10.6"
digest = "0.11.3"

console-subscriber = { git = "https://github.com/tokio-rs/console.git" }
criterion = { version = "0.8", features = ["html_reports", "async_tokio"], optional = true }
memory-stats = "1.0.0"

# ssh
russh = { version = "0.61", default-features = false, features = ["async-trait","rsa"], optional = true }
dirs = { version = "6.0", optional = true }
totp-rs = { version = "^5.7", features = ["serde_support"], optional = true }

# shadowquic
shadowquic = { version = "0.3.7", optional = true, default-features = false}

# experimental
downcast-rs = "2.0"
tailscale = { version = "0.3.3", optional = true }

aws-lc-rs = { version = "1", default-features = false, optional = true }

# tproxy
etherparse = {version = "0.20", optional = true }
tempfile = "3.27"

[dev-dependencies]
mockall = "0.15.0"
tokio-test = "0.4.5"
axum-macros = "0.5.1"
bollard = "0.21"
tar = "0.4"
serial_test = "3.5"
env_logger = "0.11"
rand_chacha = "0.10"
httpmock = "0.8.3" # TODO replace with wiremock
tracing-test = "0.2"
http-body-util = "0.1"
reqwest = { version = "0.13", features = ["socks"] }
sysinfo = { version = "0.39", features = ["network"]}
moka = { version = "0.12", features = ["future"] }
tuic-server = { tag = "v1.8.5", git = "https://github.com/Itsusinn/tuic.git" }

[build-dependencies]
prost-build = "0.14"
protox = "0.9"
anyhow = "1"

[target.'cfg(any(target_os="linux", target_os="macos", target_os="windows"))'.dependencies]
sock2proc = { git = "https://github.com/Watfaq/sock2proc.git", rev = "9f9e630" }
[target.'cfg(unix)'.dependencies]
hyperlocal = { version = "0.9", features = ["client"] }

[target.'cfg(target_os="linux")'.dependencies]
unix-udp-sock = { git = "https://github.com/Watfaq/unix-udp-sock.git", rev = "847c80b519f0fd8cff5c887ae708429897d08671" }

[target.'cfg(macos)'.dependencies]
security-framework = "3.7.0"

[target.'cfg(target_os="ios")'.dependencies]
tracing-oslog = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Networking_WinSock",
    "Win32_Foundation",
    "Win32_NetworkManagement_Rras",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Security_Authorization"
] }

[lints]
workspace = true
