[package]
name = "watfaq-netstack"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
smoltcp = { version = "0.12", default-features = false, features = [
    "std",
    "log",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "socket-tcp",
    "socket-udp",
    "socket-icmp",
    "async"
]}
bytes = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
log = "0.4"
rand = "0.9"
etherparse = "0.16"

[dev-dependencies]
tun-rs = { version = "2", features = ["async", "async_framed"] }
ipnet = "2"
env_logger = "0.11"
socket2 = "0.5.6"
socket2-ext = { version = "0.1" }
