[package]
name = "watfaq-netstack"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[features]
default = []

[dependencies]
smoltcp = { version = "0.12", default-features = false, features = [
    "std",
    "log",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "socket-tcp",
    "socket-udp",
    "socket-icmp",
    "async",
    "socket-tcp-cubic",
]}
bytes = "1.0"
tokio = { version = "1.47", features = ["full"] }
futures = "0.3"
log = "0.4"
rand = "0.9"
etherparse = "0.19"


[dev-dependencies]
tun-rs = { version = "2", features = ["async", "async_framed"] }
ipnet = "2"
socket2 = { version = "0.6", features = ["all"] }
libc = "0.2"
env_logger = "0.11"
netstack-lwip = { git = "https://github.com/eycorsican/netstack-lwip", rev = "f434fef" }
netstack-smoltcp = "0.2"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = "0.3.18"
