[package]
name = "clash-rs"
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[features]
default = []
standard = ["shadowsocks", "tuic", "ssh"]
plus = ["standard", "onion"]
android = ["shadowsocks", "tuic"] # Android build failed with libc

shadowsocks = ["clash_lib/shadowsocks"]
ssh = ["clash_lib/ssh"]
tuic = ["clash_lib/tuic"]
bench = ["clash_lib/bench"]
onion = ["clash_lib/onion"]

dhat-heap = ["dep:dhat"]

tokio-console = ["clash_lib/tokio-console"]

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }

clash_lib = { path = "../clash_lib", default-features = false }

dhat = { version = "0.3.3", optional = true }
