[package]
name = "clash-rs"
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[features]
default = ["standard"]
standard = ["shadowsocks", "tuic", "ssh", "clash_lib/zero_copy"]
plus = ["standard", "onion"]
perf = ["plus", "jemallocator"]

android = ["shadowsocks", "tuic"] # Android build failed with libc
bsd = ["shadowsocks", "tuic"]

shadowsocks = ["clash_lib/shadowsocks"]
ssh = ["clash_lib/ssh"]
tuic = ["clash_lib/tuic"]
onion = ["clash_lib/onion"]

bench = ["clash_lib/bench"]
dhat-heap = ["dep:dhat"]
tokio-console = ["clash_lib/tokio-console"]
jemallocator = ["dep:tikv-jemallocator"]

[dependencies]
clap = { version = "4", features = ["derive"] }

clash_lib = { path = "../clash_lib", default-features = false }

dhat = { version = "0.3", optional = true }
tikv-jemallocator = { version = "0.6", optional = true }

sentry = { version = "0.36", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
human-panic = "2.0"
