[package]
name = "clash_ffi"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
clash_lib = { path = "../clash_lib", features = ["shadowsocks", "tuic", "zero_copy", "onion"] }
serde_yaml = "0.9"
serde_json = "1.0"


[build-dependencies]

[lib]
name = "clash_rs"
crate-type = ["staticlib"]
