[package]
name = "clash_ffi"
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
clash_lib = { path = "../clash_lib", default-features = false, features = ["shadowsocks", "tuic", "ssh", "zero_copy"] }

[lib]
name = "clashrs"
crate-type = ["staticlib", "cdylib"]

