load("@crate_index//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "clash_lib",
    srcs = glob(["src/**/*.rs"]),
    crate_features = [
        "shadowsocks",
    ],
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(
        normal = True,
    ),
)

rust_test(
    name = "unit_test",
    crate = ":clash_lib",
    crate_features = [
        "shadowsocks",
    ],
    data = [
        "tests/data/Country.mmdb",
    ],
    proc_macro_deps = all_crate_deps(
        proc_macro_dev = True,
    ),
    deps = all_crate_deps(
        normal_dev = True,
    ),
)
